# Food-Service-Mananger

./: .gitignore  BestFitLine.h  CMakeLists.txt  Charts.qml  admin.cpp  admin.h  admin.ui  customplot.h  customrectitem.cpp  customrectitem.h  editablesqlmodel.cpp  editablesqlmodel.h  embeddeddialog.cpp  embeddeddialog.h  embeddeddialog.ui  feedbackgraphs.cpp  feedbackgraphs.h  feedbackgraphs.ui  initDatabase.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
